[package]
name = "dynamic-callee-contract"
version = "0.1.0"
authors = ["Jiyong Ha <jiyong.ha@linecorp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { path = "../../packages/std", features = ["iterator"] }
cosmwasm-storage = { path = "../../packages/storage", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
wasmer-types = { version = "1.0.2", features = ["enable-serde"] }

[dev-dependencies]
cosmwasm-schema = { path = "../../packages/schema" }
cosmwasm-vm = { path = "../../packages/vm", default-features = false, features = ["iterator"] }
wasmer-types = { version = "1.0.2"}
