[package]
name = "token-tester"
version = "0.14.0-beta1"
authors = ["shiki.tak"]
edition = "2018"
description = "simple tester for cosmwasm/ext"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cranelift"]
# For quicker tests, cargo test --lib. for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
cranelift = ["cosmwasm-vm/cranelift"]

[dependencies]
cosmwasm-ext = { path = "../../packages/ext" }
cosmwasm-std = { path = "../../packages/std", features = ["iterator"] }
cosmwasm-storage = { path = "../../packages/storage", features = ["iterator"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }

[dev-dependencies]
cosmwasm-schema = { path = "../../packages/schema" }
cosmwasm-vm = { path = "../../packages/vm", default-features = false, features = ["iterator"]  }
