[package]
name = "cw-voting-with-uuid"
version = "0.10.0"
authors = ["Jiyong Ha <jiyong.ha@linecorp.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Simple CosmWasm contract for voting with using the UUID"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# Change this to [] if you don't need Windows support and want faster integration tests.
default = ["cranelift"]
# Use cranelift backend instead of singlepass. This is required for development on Windows.
cranelift = ["cosmwasm-vm/cranelift"]
# For quicker tests, cargo test --lib. for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]


[dependencies]
cosmwasm-std = { path = "../../packages/std", features = ["iterator"] }
cosmwasm-storage = { path = "../../packages/storage"}
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
hex = "0.4"
thiserror = "1.0.23"

[dev-dependencies]
cosmwasm-schema = { path = "../../packages/schema" }
cosmwasm-vm = { path = "../../packages/vm", default-features = false, features = ["iterator"] }
